--- a/index.html
+++ b/index.html
@@ -11,9 +11,45 @@
 </head>
 
 <body>
-
-
+	<!--HEADER  -->
+	<header class="header__content">
+		<nav class="navbar navbar-expand-sm navbar-dark bg-dark myNavBar">
+			<div class="container">
+				<a class="navbar-brand" href="#">
+					<img src="assets/images/logo.png" alt="Logo"/>
+				</a>
+				<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#cvNavBar"
+					aria-controls="cvNavBar" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="cvNavBar">
+					<ul class="navbar-nav" style="margin-left: auto;">
+						<li class="nav-item active">
+							<a class="nav-link" href="#">Trang chủ </a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Giới Thiệu </a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Kinh Nghiệm</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Sản Phẩm</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Thông Tin Liên Hệ</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+	<!-- END HEADER -->
 	<script type="text/javascript" src="main.js"></script>
+	<script type="text/javascript" src="vendor/jquery-3.3.1.slim.min.js"></script>
+	<script type="text/javascript" src="vendor/bootstrap.js"></script>
+
+
 </body>
 
 </html>
