update about me

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!--HEADER  -->
 	<header>
 		<div class="header__content">
-			<nav class="navbar navbar-expand-sm navbar-dark bg-dark  myNavBar">
+			<nav class="navbar navbar-expand-sm  myNavBar">
 				<div class="container">
 					<a class="navbar-brand" href="#">
 						<img class="img-fluid" src="assets/images/logo.png" alt="Logo" />
@@ -52,16 +52,99 @@
 	<section id="banner">
 		<div class="banner__content">
 			<div>
-				<img src="assets/images/avatar.jpg" alt="avatarTrung" />
-				<p>Hello</p>
-				<h3>I’m Maria Lopez</h3>
-				<p>A Freelance Web DeveloperUI/UX DesignerWordPress DeveloperWeb Designer</p>
+				<div class="item-img">
+					<img src="assets/images/avatar.jpg" alt="avatarTrung" />
+				</div>
+				<div class="item-content">
+					<p class="item-top-text">Hello</p>
+					<h1 class="item-title">I’m Maria Lopez</h1>
+					<h2 class="item-description">A Freelance Web DeveloperUI/UX DesignerWordPress DeveloperWeb Designer
+					</h2>
+				</div>
 			</div>
-
 		</div>
-		<div class="banner__overplay"></div>
+		<!-- <div class="banner__overplay"></div> -->
+
 	</section>
 	<!-- END BANNER -->
+
+	<!-- ABOUT ME -->
+	<section id="about" class="section">
+		<div class="heading">
+			<h2>About Me</h2>
+			<p>
+				There are many variations of passages of Lorem Ipsum available
+			</p>
+		</div>
+		<div class="about__content container">
+			<div class="row">
+				<div class="col-4">
+					<img src="assets/images/about.jpg" alt="aboutMe" />
+				</div>
+				<div class="col-8">
+					<h3 class="item-title">Maria Lopez</h3>
+					<h4 class="item-subtitle">Graphic Designer & Web Developer</h4>
+					<p>There are many variations of passages of Lorem Ipsum available but the majority is have suffered
+						alteration in that some form by injected humour or randomised that words which don't look even
+						slightly believable. If you are going a to use a passage of Lorem Ipsum you need to be sure
+						there isn't anything embarrassing. There are is many variations of passages available.</p>
+					<div class="personal__info">
+						<div class="row">
+							<div class="col-6">
+								<div class="info__list">
+									<ul>
+										<li>
+											<span>Birthday: </span>05. 09.1975
+
+										</li>
+										<li>
+											<span>City: </span>05. 09.1975
+										</li>
+										<li>
+											<span>Study: </span>05. 09.1975
+										</li>
+										<li>
+											<span>Website: </span>05. 09.1975
+										</li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-6">
+								<div class="info__list">
+									<ul>
+										<li>
+											<span>Age: </span>05. 09.1975
+										</li>
+										<li>
+											<span>Degree: </span>05. 09.1975
+										</li>
+										<li>
+											<span>Mail: </span>05. 09.1975
+										</li>
+										<li>
+											<span>Phone: </span>05. 09.1975
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- END ABOUT ME -->
+
+
+	<!-- PRODUCT -->
+
+
+	<!-- END PRODUCT -->
+
+	<!-- CONTACT ME -->
+
+	<!-- END CONTACT ME -->
 	<script type="text/javascript" src="vendor/jquery-3.3.1.slim.min.js"></script>
 	<script type="text/javascript" src="vendor/popper.min.js"></script>
 	<script type="text/javascript" src="vendor/bootstrap.js"></script>
