--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="vendor/bootstrap.css">
 	<link rel="stylesheet" href="vendor/font-awesome.css">
+	<!--owe carousel  -->
+	<link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
+	<link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
+
 	<link rel="stylesheet" href="style.css">
 </head>
 
@@ -138,17 +142,203 @@
 
 
 	<!-- PRODUCT -->
+	<section id="product" class="section">
+		<div class="heading">
+			<h2>What I do</h2>
+			<p>
+				There are many variations of passages of Lorem Ipsum available
+			</p>
+		</div>
 
-
+		<div class="product__content container">
+			<div class="row">
+				<div class="col-4 product__col">
+					<div class="product__item">
+						<i class="fa fa-object-ungroup"></i>
+						<h3>UI/UX Design</h3>
+						<div class="productItem__list">
+							<ul>
+								<li>
+									<i class="fa fa-angle-right"></i> HTML/CSS
+								</li>
+								<li>
+									<i class="fa fa-angle-right"></i> SCSS
+								</li>
+								<li>
+									<i class="fa fa-angle-right"></i> Javascript
+								</li>
+								<li>
+									<i class="fa fa-angle-right"></i> ReactJS
+								</li>
+								<li>
+									<i class="fa fa-angle-right"></i> PHP
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="col-4 product__col">
+					<div class="product__item">
+						<i class="fa fa-code"></i>
+						<h3>Web Developer</h3>
+						<div class="productItem__list">
+							<ul>
+								<li>
+									<i class="fa fa-angle-right"></i> HTML/CSS
+								</li>
+								<li>
+									<i class="fa fa-angle-right"></i> SCSS
+								</li>
+								<li>
+									<i class="fa fa-angle-right"></i> Javascript
+								</li>
+								<li>
+									<i class="fa fa-angle-right"></i> ReactJS
+								</li>
+								<li>
+									<i class="fa fa-angle-right"></i> PHP
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="col-4 product__col">
+					<div class="product__item">
+						<i class="fa fa-users"></i>
+						<h3>Social Media</h3>
+						<div class="productItem__list">
+							<ul>
+								<li>
+									<i class="fa fa-angle-right"></i> HTML/CSS
+								</li>
+								<li>
+									<i class="fa fa-angle-right"></i> SCSS
+								</li>
+								<li>
+									<i class="fa fa-angle-right"></i> Javascript
+								</li>
+								<li>
+									<i class="fa fa-angle-right"></i> ReactJS
+								</li>
+								<li>
+									<i class="fa fa-angle-right"></i> PHP
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- END PRODUCT -->
+
+	<!-- PROJECT -->
+	<section id="project" class="section">
+		<div class="heading">
+			<h2>Project Complete</h2>
+			<p>
+				There are many variations of passages of Lorem Ipsum available
+			</p>
+		</div>
+		<div class="project__content container">
+			<div class="owl-carousel owl-theme projects__carousel">
+				<div class="card">
+					<img class="card-img-top" src="./assets/images/about.jpg" alt="project01">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+				<div class="card">
+					<img class="card-img-top" src="./assets/images/about.jpg" alt="project02">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+				<div class="card">
+					<img class="card-img-top" src="./assets/images/about.jpg" alt="project03">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+				<div class="card">
+					<img class="card-img-top" src="./assets/images/about.jpg" alt="project04">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+				<div class="card">
+					<img class="card-img-top" src="./assets/images/about.jpg" alt="project05">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+				<div class="card">
+					<img class="card-img-top" src="./assets/images/about.jpg" alt="project06">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of
+							the card's content.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- END PROJECT -->
+
 
 	<!-- CONTACT ME -->
 
 	<!-- END CONTACT ME -->
+
+
+
+
 	<script type="text/javascript" src="vendor/jquery-3.3.1.slim.min.js"></script>
 	<script type="text/javascript" src="vendor/popper.min.js"></script>
 	<script type="text/javascript" src="vendor/bootstrap.js"></script>
 	<script type="text/javascript" src="main.js"></script>
+
+
+	<!-- OWE CAROUSEL -->
+	<script src="./assets/js/owl.carousel.min.js"></script>
+
+	<script>
+
+		$('.projects__carousel').owlCarousel({
+			loop: true,
+			margin: 10,
+			dots:false,
+			responsive: {
+				0: {
+					items: 1
+				},
+				600: {
+					items: 3
+				},
+				1000: {
+					items: 3
+				}
+			}
+		})
+	</script>
+
+
 </body>
 
 </html>
